--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="text/javascript" src="JS/controller.js"></script>
-		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	</head>
 
 	<body>
+		<div class="container-fluid">
+			<header>
+				<a href="http://www.elevenmadisonpark.com/">
+					<img src="photo/logo_top.png">
+				</a>
+			</header>
 
-		<header>
+			<section>
 
-		</header>
+			</section>
 
-		<section>
+			<footer>
 
-		</section>
-
-		<footer>
-
-		</footer>
-
+			</footer>
+		</div>
 	</body>
 
 </html>
