--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<script type="text/javascript" src="JS/controller.js"></script>
-		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+		<script type="text/javascript" src="js/form.js"></script>
+		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	</head>
 
 	<body>
@@ -16,6 +16,9 @@
 		<header>
 
 		</header>
+
+			<div id="js-slideShowContainer" class="slideShowContainer slideshow-container">
+			</div>	
 
 		<section>
 
