basic layout done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="shortcut icon" href="https://media-cdn.getbento.com/accounts/102da05919be0726cec2e6365172199c/media/accounts/media/hf1OSSqmQByRUTiQbhxg_favicon.ico" type="image/x-icon"><!-- this adds the favicon -->
 		<script type="text/javascript" src="js/form.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
@@ -21,11 +22,75 @@
 			</header>
 
 			<section>
-test2
-test3
-				<div id="js-slideShowContainer" class="slideShowContainer slideshow-container">
-				
-				</div>	
+
+				<div class="wrapper">
+					
+					<div class="slider">
+						<img id="01" src="photo/0a.jpe">
+						<!-- <img id="02" src="photo/1a.jpe">
+						<img id="03" src="photo/2a.jpe">
+						<img id="04" src="photo/3a.jpe"> -->
+					</div>
+
+					<div class="slider">
+						<img id="11" src="photo/0b.jpe">
+						<!-- <img id="12" src="photo/1b.jpe">
+						<img id="13" src="photo/2b.jpe">
+						<img id="14" src="photo/3b.jpe"> -->
+					</div>
+
+					<div class="slider">
+						<img id="21" src="photo/0c.jpe">
+						<!-- <img id="22" src="photo/1c.jpe">
+						<img id="23" src="photo/2c.jpe">
+						<img id="24" src="photo/3c.jpe"> -->
+					</div>
+
+					<div class="slider">
+						<img id="31" src="photo/0d.jpe">
+						<!-- <img id="32" src="photo/1d.jpe">
+						<img id="33" src="photo/2d.jpe">
+						<img id="34" src="photo/3d.jpe"> -->
+					</div>
+
+				</div>
+
+				<div class="navigation">
+					<nav>
+						<ul class="nav nav-stacked">
+							<li>
+								<a href="">MENUS</a>
+							</li>
+							<li>
+								<a href="">RESERVATIONS</a>
+							</li>
+							<li>
+								<a href="">PEOPLE</a>
+							</li>
+							<li>
+								<a href="">ACCOLADES</a>
+							</li>
+							<li>
+								<a href="">PRIVATE DINING</a>
+							</li>
+							<li>
+								<a href="">COOKBOOKS</a>
+							</li>
+							<li>
+								<a href="">COLLABORATIONS</a>
+							</li>
+							<li>
+								<a href="">CONTACT</a>
+							</li>
+						</ul>
+					</nav>
+
+					<div class="bottem_logo">
+						<a href="http://www.relaischateaux.com/" target="blank">
+							<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
+						</a>
+					</div>
+				</div>
 
 			</section>
 
