looks good just need some help with a few changes.  Just starting the js

--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@
 					
 					<div class="slider">
 						<img id="01" src="photo/0a.jpe">
-						<!-- <img id="02" src="photo/1a.jpe">
+						<img id="02" src="photo/1a.jpe">
 						<img id="03" src="photo/2a.jpe">
-						<img id="04" src="photo/3a.jpe"> -->
+						<img id="04" src="photo/3a.jpe">
 					</div>
 
 					<div class="slider">
 						<img id="11" src="photo/0b.jpe">
-						<!-- <img id="12" src="photo/1b.jpe">
+						<img id="12" src="photo/1b.jpe">
 						<img id="13" src="photo/2b.jpe">
-						<img id="14" src="photo/3b.jpe"> -->
+						<img id="14" src="photo/3b.jpe">
 					</div>
 
 					<div class="slider">
 						<img id="21" src="photo/0c.jpe">
-						<!-- <img id="22" src="photo/1c.jpe">
+						<img id="22" src="photo/1c.jpe">
 						<img id="23" src="photo/2c.jpe">
-						<img id="24" src="photo/3c.jpe"> -->
+						<img id="24" src="photo/3c.jpe">
 					</div>
 
 					<div class="slider">
 						<img id="31" src="photo/0d.jpe">
-						<!-- <img id="32" src="photo/1d.jpe">
+						<img id="32" src="photo/1d.jpe">
 						<img id="33" src="photo/2d.jpe">
-						<img id="34" src="photo/3d.jpe"> -->
+						<img id="34" src="photo/3d.jpe">
 					</div>
 
 				</div>
 
 				<div class="navigation">
 					<nav>
-						<ul class="nav nav-stacked">
+						<ul class="nav-stacked">
 							<li>
 								<a href="">MENUS</a>
 							</li>
@@ -85,7 +85,7 @@
 						</ul>
 					</nav>
 
-					<div class="bottem_logo">
+					<div class="bottom-logo">
 						<a href="http://www.relaischateaux.com/" target="blank">
 							<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
 						</a>
