--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Eleven Madison Park Resturant</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+		<script src="http://malsup.github.io/min/jquery.cycle.all.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="shortcut icon" href="https://media-cdn.getbento.com/accounts/102da05919be0726cec2e6365172199c/media/accounts/media/hf1OSSqmQByRUTiQbhxg_favicon.ico" type="image/x-icon"><!-- this adds the favicon -->
 		<script type="text/javascript" src="js/form.js"></script>
@@ -25,28 +26,28 @@
 
 				<div class="wrapper">
 					
-					<div class="slider">
+					<div class="slider1">
 						<img id="01" src="photo/0a.jpe">
 						<img id="02" src="photo/1a.jpe">
 						<img id="03" src="photo/2a.jpe">
 						<img id="04" src="photo/3a.jpe">
 					</div>
 
-					<div class="slider">
+					<div class="slider2">
 						<img id="11" src="photo/0b.jpe">
 						<img id="12" src="photo/1b.jpe">
 						<img id="13" src="photo/2b.jpe">
 						<img id="14" src="photo/3b.jpe">
 					</div>
 
-					<div class="slider">
+					<div class="slider3">
 						<img id="21" src="photo/0c.jpe">
 						<img id="22" src="photo/1c.jpe">
 						<img id="23" src="photo/2c.jpe">
 						<img id="24" src="photo/3c.jpe">
 					</div>
 
-					<div class="slider">
+					<div class="slider4">
 						<img id="31" src="photo/0d.jpe">
 						<img id="32" src="photo/1d.jpe">
 						<img id="33" src="photo/2d.jpe">
