pic spacing fixed but pics are now blocking nav bar

--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
 	</head>
 
 	<body>
-		<div class="container-fluid">
-			<header>
+		<div class="shell">
+			<header class="site-header" role="banner">
 				<a href="http://www.elevenmadisonpark.com/">
 					<img src="photo/logo_top.png">
 				</a>
 			</header>
 
-			<section>
+			<section class="wrapper">
 
-				<div class="wrapper">
+				<div class="container-fluid slideshow1 slideshow clearfix js-slideshow">
 					
-					<div class="slider1">
+					<div class="slider1 col-sm-3 slide1 slide js-slide1">
 						<img id="01" src="photo/0a.jpe">
 						<img id="02" src="photo/1a.jpe">
 						<img id="03" src="photo/2a.jpe">
 						<img id="04" src="photo/3a.jpe">
 					</div>
 
-					<div class="slider2">
+					<div class="slider2 col-sm-3">
 						<img id="11" src="photo/0b.jpe">
 						<img id="12" src="photo/1b.jpe">
 						<img id="13" src="photo/2b.jpe">
 						<img id="14" src="photo/3b.jpe">
 					</div>
 
-					<div class="slider3">
+					<div class="slider3 col-sm-3">
 						<img id="21" src="photo/0c.jpe">
 						<img id="22" src="photo/1c.jpe">
 						<img id="23" src="photo/2c.jpe">
 						<img id="24" src="photo/3c.jpe">
 					</div>
 
-					<div class="slider4">
+					<div class="slider4 col-sm-3">
 						<img id="31" src="photo/0d.jpe">
 						<img id="32" src="photo/1d.jpe">
 						<img id="33" src="photo/2d.jpe">
