--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body>
-		<div class="shell">
+		<div class="shell container-fluid clearfix">
 			<header class="site-header" role="banner">
 				<a href="http://www.elevenmadisonpark.com/">
 					<img src="photo/logo_top.png">
@@ -24,75 +24,74 @@
 
 			<section class="wrapper">
 
-				<div class="container-fluid clearfix">
+				
 					<div class="row">
-						<div class="slider1 col-sm-3">
+						<div class="slide slider1 col-sm-3">
 							<img id="01" src="photo/0a.jpe">
 							<img id="02" src="photo/1a.jpe">
 							<img id="03" src="photo/2a.jpe">
 							<img id="04" src="photo/3a.jpe">
 						</div>
 
-						<div class="slider2 col-sm-3">
+						<div class="slide slider2 col-sm-3">
 							<img id="11" src="photo/0b.jpe">
 							<img id="12" src="photo/1b.jpe">
 							<img id="13" src="photo/2b.jpe">
 							<img id="14" src="photo/3b.jpe">
 						</div>
 
-						<div class="slider3 col-sm-3">
+						<div class="slide slider3 col-sm-3">
 							<img id="21" src="photo/0c.jpe">
 							<img id="22" src="photo/1c.jpe">
 							<img id="23" src="photo/2c.jpe">
 							<img id="24" src="photo/3c.jpe">
 						</div>
 
-						<div class="slider4 col-sm-3">
+						<div class="slide slider4 col-sm-3">
 							<img id="31" src="photo/0d.jpe">
 							<img id="32" src="photo/1d.jpe">
 							<img id="33" src="photo/2d.jpe">
 							<img id="34" src="photo/3d.jpe">
 						</div>
 					</div>
-				</div>
 
-				<div class="navigation">
-					<nav>
-						<ul class="nav-stacked">
-							<li>
-								<a href="">MENUS</a>
-							</li>
-							<li>
-								<a href="">RESERVATIONS</a>
-							</li>
-							<li>
-								<a href="">PEOPLE</a>
-							</li>
-							<li>
-								<a href="">ACCOLADES</a>
-							</li>
-							<li>
-								<a href="">PRIVATE DINING</a>
-							</li>
-							<li>
-								<a href="">COOKBOOKS</a>
-							</li>
-							<li>
-								<a href="">COLLABORATIONS</a>
-							</li>
-							<li>
-								<a href="">CONTACT</a>
-							</li>
-						</ul>
-					</nav>
+					<div class="navigation">
+						<nav>
+							<ul class="nav-stacked col-xs-6">
+								<li>
+									<a href="">MENUS</a>
+								</li>
+								<li>
+									<a href="">RESERVATIONS</a>
+								</li>
+								<li>
+									<a href="">PEOPLE</a>
+								</li>
+								<li>
+									<a href="">ACCOLADES</a>
+								</li>
+								<li>
+									<a href="">PRIVATE DINING</a>
+								</li>
+								<li>
+									<a href="">COOKBOOKS</a>
+								</li>
+								<li>
+									<a href="">COLLABORATIONS</a>
+								</li>
+								<li>
+									<a href="">CONTACT</a>
+								</li>
+							</ul>
+						</nav>
 
-					<div class="bottom-logo">
-						<a href="http://www.relaischateaux.com/" target="blank">
-							<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
-						</a>
+						<div class="bottom-logo col-xs-6">
+							<a href="http://www.relaischateaux.com/" target="blank">
+								<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
+							</a>
+						</div>
 					</div>
-				</div>
-
+				
 			</section>
 
 
