disappear and reappear

--- a/index.html
+++ b/index.html
@@ -16,38 +16,36 @@
 
 	<body>
 		<div class="shell container-fluid clearfix">
-			<header class="site-header" role="banner">
+			<header class="site-header pull-right" role="banner">
 				<a href="http://www.elevenmadisonpark.com/">
 					<img src="photo/logo_top.png">
 				</a>
 			</header>
 
 			<section class="wrapper">
-
-				
-					<div class="row">
-						<div class="slide slider1 col-sm-3">
+					<div class="row hidden-xs">
+						<div class="slide slider1 col-xs-3">
 							<img id="01" src="photo/0a.jpe">
 							<img id="02" src="photo/1a.jpe">
 							<img id="03" src="photo/2a.jpe">
 							<img id="04" src="photo/3a.jpe">
 						</div>
 
-						<div class="slide slider2 col-sm-3">
+						<div class="slide slider2 col-xs-3">
 							<img id="11" src="photo/0b.jpe">
 							<img id="12" src="photo/1b.jpe">
 							<img id="13" src="photo/2b.jpe">
 							<img id="14" src="photo/3b.jpe">
 						</div>
 
-						<div class="slide slider3 col-sm-3">
+						<div class="slide slider3 col-xs-3">
 							<img id="21" src="photo/0c.jpe">
 							<img id="22" src="photo/1c.jpe">
 							<img id="23" src="photo/2c.jpe">
 							<img id="24" src="photo/3c.jpe">
 						</div>
 
-						<div class="slide slider4 col-sm-3">
+						<div class="slide slider4 col-xs-3">
 							<img id="31" src="photo/0d.jpe">
 							<img id="32" src="photo/1d.jpe">
 							<img id="33" src="photo/2d.jpe">
@@ -57,7 +55,7 @@
 
 					<div class="navigation">
 						<nav>
-							<ul class="nav-stacked col-xs-6">
+							<ul class="nav-stacked">
 								<li>
 									<a href="">MENUS</a>
 								</li>
@@ -84,8 +82,7 @@
 								</li>
 							</ul>
 						</nav>
-
-						<div class="bottom-logo col-xs-6">
+						<div class="bottom-logo hidden-xs">
 							<a href="http://www.relaischateaux.com/" target="blank">
 								<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
 							</a>
@@ -95,8 +92,13 @@
 			</section>
 
 
-			<footer>
-
+			<footer class="visible-xs">
+				<p>
+					11 Madison Ave, New York, New York 10010
+					<br>
+					212.889.0905 
+					<a href="mailto:info@elevinmadisonpark.com">info@elevenmadisonpark.com</a>
+				</p>	
 			</footer>
 
 		</div>
