on the hunt for resize reason

--- a/index.html
+++ b/index.html
@@ -16,43 +16,41 @@
 
 	<body>
 		<div class="shell container-fluid clearfix">
-			<header class="site-header pull-right" role="banner">
+			<header class="site-header" role="banner">
 				<a href="http://www.elevenmadisonpark.com/">
 					<img src="photo/logo_top.png">
 				</a>
 			</header>
 
 			<section class="wrapper">
-					<div class="row hidden-xs">
-						<div class="slide slider1 col-xs-3">
-							<img id="01" src="photo/0a.jpe">
-							<img id="02" src="photo/1a.jpe">
-							<img id="03" src="photo/2a.jpe">
-							<img id="04" src="photo/3a.jpe">
-						</div>
+				<div class="slide slider1 hidden-xs">
+					<img id="01" src="photo/0a.jpe">
+					<img id="02" src="photo/1a.jpe">
+					<img id="03" src="photo/2a.jpe">
+					<img id="04" src="photo/3a.jpe">
+				</div>
 
-						<div class="slide slider2 col-xs-3">
-							<img id="11" src="photo/0b.jpe">
-							<img id="12" src="photo/1b.jpe">
-							<img id="13" src="photo/2b.jpe">
-							<img id="14" src="photo/3b.jpe">
-						</div>
+				<div class="slide slider2 hidden-xs">
+					<img id="11" src="photo/0b.jpe">
+					<img id="12" src="photo/1b.jpe">
+					<img id="13" src="photo/2b.jpe">
+					<img id="14" src="photo/3b.jpe">
+				</div>
 
-						<div class="slide slider3 col-xs-3">
-							<img id="21" src="photo/0c.jpe">
-							<img id="22" src="photo/1c.jpe">
-							<img id="23" src="photo/2c.jpe">
-							<img id="24" src="photo/3c.jpe">
-						</div>
+				<div class="slide slider3 hidden-xs">
+					<img id="21" src="photo/0c.jpe">
+					<img id="22" src="photo/1c.jpe">
+					<img id="23" src="photo/2c.jpe">
+					<img id="24" src="photo/3c.jpe">
+				</div>
 
-						<div class="slide slider4 col-xs-3">
-							<img id="31" src="photo/0d.jpe">
-							<img id="32" src="photo/1d.jpe">
-							<img id="33" src="photo/2d.jpe">
-							<img id="34" src="photo/3d.jpe">
-						</div>
-					</div>
-
+				<div class="slide slider4 hidden-xs">
+					<img id="31" src="photo/0d.jpe">
+					<img id="32" src="photo/1d.jpe">
+					<img id="33" src="photo/2d.jpe">
+					<img id="34" src="photo/3d.jpe">
+				</div>
+			</section>
 					<div class="navigation">
 						<nav>
 							<ul class="nav-stacked">
@@ -89,7 +87,7 @@
 						</div>
 					</div>
 				
-			</section>
+			<!-- </section> -->
 
 
 			<footer class="visible-xs">
