--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
 				</a>
 			</header>
 
-			<section class="wrapper">
-					<div class="row hidden-xs">
-						<div class="slide slider1 col-xs-3">
-							<img id="01" src="photo/0a.jpe">
-							<img id="02" src="photo/1a.jpe">
-							<img id="03" src="photo/2a.jpe">
-							<img id="04" src="photo/3a.jpe">
+					<div class="row ">
+						<div class="slide slider1 col-md-2">
+							<img id="01" src="photo/0a.jpe" class="img-responsive">
+							<img id="02" src="photo/1a.jpe" class="img-responsive">
+							<img id="03" src="photo/2a.jpe" class="img-responsive">
+							<img id="04" src="photo/3a.jpe" class="img-responsive">
 						</div>
 
-						<div class="slide slider2 col-xs-3">
-							<img id="11" src="photo/0b.jpe">
-							<img id="12" src="photo/1b.jpe">
-							<img id="13" src="photo/2b.jpe">
-							<img id="14" src="photo/3b.jpe">
+						<div class="slide slider2 col-md-2">
+							<img id="11" src="photo/0b.jpe" class="img-responsive img-circle">
+							<img id="12" src="photo/1b.jpe" class="img-responsive img-circle">
+							<img id="13" src="photo/2b.jpe" class="img-responsive img-circle">
+							<img id="14" src="photo/3b.jpe" class="img-responsive img-circle">
 						</div>
 
-						<div class="slide slider3 col-xs-3">
-							<img id="21" src="photo/0c.jpe">
-							<img id="22" src="photo/1c.jpe">
-							<img id="23" src="photo/2c.jpe">
-							<img id="24" src="photo/3c.jpe">
+						<div class="slide slider3 col-md-2">
+							<img id="21" src="photo/0c.jpe" class="img-responsive">
+							<img id="22" src="photo/1c.jpe" class="img-responsive">
+							<img id="23" src="photo/2c.jpe" class="img-responsive">
+							<img id="24" src="photo/3c.jpe" class="img-responsive">
 						</div>
 
-						<div class="slide slider4 col-xs-3">
-							<img id="31" src="photo/0d.jpe">
-							<img id="32" src="photo/1d.jpe">
-							<img id="33" src="photo/2d.jpe">
-							<img id="34" src="photo/3d.jpe">
+						<div class="slide slider4 col-md-2 img-responsive" >
+							<img id="31" src="photo/0d.jpe" class="img-responsive">
+							<img id="32" src="photo/1d.jpe" class="img-responsive">
+							<img id="33" src="photo/2d.jpe" class="img-responsive">
+							<img id="34" src="photo/3d.jpe" class="img-responsive">
 						</div>
 					</div>
 
+			<div class="container-fluid">
 					<div class="navigation">
 						<nav>
 							<ul class="nav-stacked">
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 				
-			</section>
+			</div>
 
 
 			<footer class="visible-xs">
