--- a/index.html
+++ b/index.html
@@ -1,105 +1,105 @@
 <!DOCTYPE html>
 <html>
-	
-	<head>
-		<meta charset="UTF-8">
-		<title>Eleven Madison Park Resturant</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-		<script src="https://malsup.github.io/min/jquery.cycle2.min.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="shortcut icon" href="https://media-cdn.getbento.com/accounts/102da05919be0726cec2e6365172199c/media/accounts/media/hf1OSSqmQByRUTiQbhxg_favicon.ico" type="image/x-icon"><!-- this adds the favicon -->
-		<script type="text/javascript" src="js/form.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link type="text/css" rel="stylesheet" href="css/style.css"/>
-	</head>
 
-	<body>
-		<div class="shell container-fluid clearfix">
-			<header class="site-header" role="banner">
-				<a href="http://www.elevenmadisonpark.com/">
-					<img src="photo/logo_top.png">
+<head>
+	<meta charset="UTF-8">
+	<title>Eleven Madison Park Resturant</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script src="https://malsup.github.io/min/jquery.cycle2.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="shortcut icon" href="https://media-cdn.getbento.com/accounts/102da05919be0726cec2e6365172199c/media/accounts/media/hf1OSSqmQByRUTiQbhxg_favicon.ico" type="image/x-icon">
+	<!-- this adds the favicon -->
+	<script type="text/javascript" src="js/form.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link type="text/css" rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+	<div class="shell container-fluid clearfix">
+		<header class="site-header" role="banner">
+			<a href="http://www.elevenmadisonpark.com/">
+				<img src="photo/logo_top.png">
+			</a>
+		</header>
+
+		<section class="wrapper">
+			<div class="slide slider1 hidden-xs">
+				<img class="img-responsive" id="01" src="photo/0a.jpe">
+				<img class="img-responsive" id="02" src="photo/1a.jpe">
+				<img class="img-responsive" id="03" src="photo/2a.jpe">
+				<img class="img-responsive" id="04" src="photo/3a.jpe">
+			</div>
+
+			<div class="slide slider2 hidden-xs">
+				<img class="img-responsive" id="11" src="photo/0b.jpe">
+				<img class="img-responsive" id="12" src="photo/1b.jpe">
+				<img class="img-responsive" id="13" src="photo/2b.jpe">
+				<img class="img-responsive" id="14" src="photo/3b.jpe">
+			</div>
+
+			<div class="slide slider3 hidden-xs">
+				<img class="img-responsive" id="21" src="photo/0c.jpe">
+				<img class="img-responsive" id="22" src="photo/1c.jpe">
+				<img class="img-responsive" id="23" src="photo/2c.jpe">
+				<img class="img-responsive" id="24" src="photo/3c.jpe">
+			</div>
+
+			<div class="slide slider4 hidden-xs">
+				<img class="img-responsive" id="31" src="photo/0d.jpe">
+				<img class="img-responsive" id="32" src="photo/1d.jpe">
+				<img class="img-responsive" id="33" src="photo/2d.jpe">
+				<img class="img-responsive" id="34" src="photo/3d.jpe">
+			</div>
+		</section>
+		<div class="navigation">
+			<nav>
+				<ul class="nav-stacked">
+					<li>
+						<a href="">MENUS</a>
+					</li>
+					<li>
+						<a href="">RESERVATIONS</a>
+					</li>
+					<li>
+						<a href="">PEOPLE</a>
+					</li>
+					<li>
+						<a href="">ACCOLADES</a>
+					</li>
+					<li>
+						<a href="">PRIVATE DINING</a>
+					</li>
+					<li>
+						<a href="">COOKBOOKS</a>
+					</li>
+					<li>
+						<a href="">COLLABORATIONS</a>
+					</li>
+					<li>
+						<a href="">CONTACT</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="bottom-logo hidden-xs">
+				<a href="http://www.relaischateaux.com/" target="blank">
+					<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
 				</a>
-			</header>
-
-			<section class="wrapper">
-				<div class="slide slider1 hidden-xs">
-					<img class="img-responsive" id="01" src="photo/0a.jpe">
-					<img class="img-responsive" id="02" src="photo/1a.jpe">
-					<img class="img-responsive" id="03" src="photo/2a.jpe">
-					<img class="img-responsive" id="04" src="photo/3a.jpe">
-				</div>
-
-				<div class="slide slider2 hidden-xs">
-					<img class="img-responsive" id="11" src="photo/0b.jpe">
-					<img class="img-responsive" id="12" src="photo/1b.jpe">
-					<img class="img-responsive" id="13" src="photo/2b.jpe">
-					<img class="img-responsive" id="14" src="photo/3b.jpe">
-				</div>
-
-				<div class="slide slider3 hidden-xs">
-					<img class="img-responsive" id="21" src="photo/0c.jpe">
-					<img class="img-responsive" id="22" src="photo/1c.jpe">
-					<img class="img-responsive" id="23" src="photo/2c.jpe">
-					<img class="img-responsive" id="24" src="photo/3c.jpe">
-				</div>
-
-				<div class="slide slider4 hidden-xs">
-					<img class="img-responsive" id="31" src="photo/0d.jpe">
-					<img class="img-responsive" id="32" src="photo/1d.jpe">
-					<img class="img-responsive" id="33" src="photo/2d.jpe">
-					<img class="img-responsive" id="34" src="photo/3d.jpe">
-				</div>
-			</section>
-					<div class="navigation">
-						<nav>
-							<ul class="nav-stacked">
-								<li>
-									<a href="">MENUS</a>
-								</li>
-								<li>
-									<a href="">RESERVATIONS</a>
-								</li>
-								<li>
-									<a href="">PEOPLE</a>
-								</li>
-								<li>
-									<a href="">ACCOLADES</a>
-								</li>
-								<li>
-									<a href="">PRIVATE DINING</a>
-								</li>
-								<li>
-									<a href="">COOKBOOKS</a>
-								</li>
-								<li>
-									<a href="">COLLABORATIONS</a>
-								</li>
-								<li>
-									<a href="">CONTACT</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="bottom-logo hidden-xs">
-							<a href="http://www.relaischateaux.com/" target="blank">
-								<img src="http://assets-cdn.getbento.com/assets/elevenmadisonpark/!362b28668884299914b932bd37a50b983c5e7c90ae93b!/img/logo_relais.png" class="something" alt="Relais & Chateaux">
-							</a>
-						</div>
-					</div>
-				
-			<!-- </section> -->
-
-
-			<footer class="visible-xs">
-				<p>
-					11 Madison Ave, New York, New York 10010
-					<br>
-					212.889.0905 
-					<a href="mailto:info@elevinmadisonpark.com">info@elevenmadisonpark.com</a>
-				</p>	
-			</footer>
-
+			</div>
 		</div>
-	</body>
+
+		<!-- </section> -->
+
+
+		<footer class="visible-xs">
+			<p>
+				11 Madison Ave, New York, New York 10010
+				<br> 212.889.0905
+				<a href="mailto:info@elevinmadisonpark.com">info@elevenmadisonpark.com</a>
+			</p>
+		</footer>
+
+	</div>
+</body>
 
 </html>
